helloworld_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-clusterip
  namespace: tomturbotest
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - name: web
      port: 8080
      targetPort: web
