helloworld_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: tomturbotest
spec:
  rules:
    - host: test.kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: helloworld-clusterip
                port:
                  number: 8080
            path: /
            pathType: Prefix
